--- a/src/app/components/cart/cart.component.scss
+++ b/src/app/components/cart/cart.component.scss
@@ -42,7 +42,7 @@ img{
 }
 
 .availability{
-   margin-top:20px;
+    margin-top: 10px;
    margin-right: 20px;
     font-size:x-large;
 }
@@ -55,3 +55,18 @@ img{
     margin-left:92%;
 }
 
+.emptyCart{
+     text-align: center;
+     font-size:x-large;
+}
+
+.shopping-cart{
+    font-size: 48px; 
+      height: 48px;
+      width: 48px;    
+}
+
+.product-left{
+    margin-top:10px;
+    font-size:large
+}
