--- a/src/app/components/product-dashboard/product-dashboard.component.scss
+++ b/src/app/components/product-dashboard/product-dashboard.component.scss
@@ -55,3 +55,13 @@ img[mat-card-image] {
   height:50px;
 }
 
+.emptyCart{
+     text-align: center;
+     font-size:x-large;
+}
+
+mat-icon{
+    font-size: 48px; 
+      height: 48px;
+      width: 48px;    
+}
