--- a/src/app/components/cart/cart.component.html
+++ b/src/app/components/cart/cart.component.html
@@ -1,25 +1,36 @@
 <div>
      <h1 class="header"><b>Cart Details ({{userCart.length}})</b> <br> </h1>
+     @if(userCart.length>0){
      <h2 class="header"> <b>Total Cost : {{totalAmount | currency:'INR' :'symbol':'1.0-2'}}</b> </h2>
      <span> <button matFab extended class="order" (click)="placeOrder()">Place Order</button></span>
+     }
 </div>
+
+<div class="emptyCart">
+     @if(userCart.length===0){
+     <h1><mat-icon class="shopping-cart">shopping_cart</mat-icon> Cart is empty</h1>
+    }
+</div>
+
 @for (cart of userCart; track cart.cartId) {
 <mat-card class="custom-card">
 
-     <mat-card-header class="header" (click)="cardClick(cart.product.productId)">
+     <mat-card-header class="header" (click)="cardClick(cart.product?.productId!)">
 
-          <mat-card-title class="title"><b>{{cart.product.productName}}</b></mat-card-title>
+          <mat-card-title class="title"><b>{{cart.product?.productName}}</b></mat-card-title>
 
 
      </mat-card-header>
      <span class="total"> <b>Total : {{cart.totalCost | currency:'INR' :'symbol':'1.0-2' }} </b> </span>
-     <mat-card-content (click)="cardClick(cart.product.productId)">
-          <img mat-card-image src={{cart.product.img}} alt="Profile Photo" />
+     <mat-card-content (click)="cardClick(cart.product?.productId!)">
+          <img mat-card-image src={{cart.product?.img}} alt="Profile Photo" />
           <p class="content">
-               <b>Description : </b>{{cart.product.description}}
+               <b>Description : </b>{{cart.product?.description}}
           </p>
-          <div class="cost"><b> {{cart.product.cost | currency:'INR' :'symbol':'1.0-2' }}</b> </div> <br>
-          <div><b> Quantity added {{cart.quantity}} </b> </div>
+          <div class="cost"><b> {{cart.product?.cost | currency:'INR' :'symbol':'1.0-2' }}</b> </div> <br>
+          <div><b> Quantity added {{cart?.quantity}} </b> </div>
+          <div  class="product-left" [style.color]="cart.product!.quantity < 10 ? 'orange' : 'black'">
+                Product left <b>{{cart.product?.quantity}}</b>  </div> 
           <div class="availability" [style.color]="cart.product!.quantity > 0 ? 'green' : 'red'">
                {{cart.product!.quantity > 0 ? 'In Stock' : 'Out of Stock' }}</div> <br>
 
