--- a/src/app/components/sign-up/sign-up.component.html
+++ b/src/app/components/sign-up/sign-up.component.html
@@ -3,47 +3,52 @@
     <mat-card-title><b>SignUp</b></mat-card-title>
   </mat-card-header>
   <mat-card-content>
-   <form [formGroup]="signupForm" (ngSubmit)="onSubmit()">
-  <mat-form-field>
-    <mat-label>Full Name</mat-label>
-    <input matInput placeholder="Enter your full name" formControlName="username" />
-    <mat-error>
-        @if (signupForm.get('username')?.invalid) { Name is required }
-      </mat-error>
-  </mat-form-field><br>
-    <mat-form-field>
+    <form [formGroup]="signupForm" (ngSubmit)="onSubmit()">
+      <mat-form-field>
+        <mat-label>Full Name</mat-label>
+        <input matInput placeholder="Enter your full name" formControlName="username" />
+        <mat-error>
+          @if (signupForm.controls['username'].hasError('required') && signupForm.controls['username'].touched ) { Name is required }
+          @if (signupForm.controls['username'].hasError('pattern') && signupForm.controls['username'].touched ){Invalid UserName }
+        </mat-error>
+      </mat-form-field><br>
+      <mat-form-field>
         <mat-label>Email</mat-label>
         <input matInput type="email" placeholder="Enter your email" formControlName="email" />
         <mat-error>
-                  @if ( !signupForm.get('email')?.value  && signupForm.controls['email'].touched ) { Email is required }
-        @if (signupForm.controls['email'].hasError('pattern') && signupForm.controls['email'].touched ){Proper Email is required }
-      </mat-error>
-  </mat-form-field><br>
+          @if ( !signupForm.get('email')?.value && signupForm.controls['email'].touched ) { Email is required }
+          @if (signupForm.controls['email'].hasError('pattern') && signupForm.controls['email'].touched ){Proper Email
+          is required }
+        </mat-error>
+      </mat-form-field><br>
       <mat-form-field>
         <mat-label>Phone:</mat-label>
-        <input matInput  placeholder="Enter your Phone Number" formControlName="phone" />
+        <input matInput placeholder="Enter your Phone Number" formControlName="phone" />
         <mat-error>
-                  @if ( !signupForm.get('phone')?.value  && signupForm.controls['phone'].touched ) { Phone Number is required }
-        @if (signupForm.controls['phone'].hasError('pattern') && signupForm.controls['phone'].touched ){Invalid Phone Number}
-      </mat-error>
-  </mat-form-field><br>
-  <mat-form-field>
-  <mat-label>Password</mat-label>
-  <input matInput type="password" placeholder="Enter your password" formControlName="password"  (keyup)="passwordCheck()" />
-<mat-error>
-        @if (signupForm.get('password')?.invalid) { Password is required }     
-      </mat-error>
-</mat-form-field><br>
-  <mat-form-field>
-  <mat-label> Confirm Password</mat-label>
-  <input matInput type="password" placeholder="Enter your password again" formControlName="confirmPassword" (keyup)="passwordCheck()" />
-  <mat-error>
-      @if (signupForm.get('confirmPassword')?.invalid) { Password is required }
-      <!-- @if (signupForm.get('confirmPassword')?.errors?.['passwordsMismatch'] ) {Passwords do not match} -->
-      </mat-error>
-</mat-form-field><br>
-     <div class="password-error">  @if (checkPasswordValue){Passwords do not match}</div>
+          @if ( !signupForm.get('phone')?.value && signupForm.controls['phone'].touched ) { Phone Number is required }
+          @if (signupForm.controls['phone'].hasError('pattern') && signupForm.controls['phone'].touched ){Invalid Phone
+          Number}
+        </mat-error>
+      </mat-form-field><br>
+      <mat-form-field>
+        <mat-label>Password</mat-label>
+        <input matInput type="password" placeholder="Enter your password" formControlName="password"
+          (keyup)="passwordCheck()" />
+        <mat-error>
+          @if (signupForm.get('password')?.invalid) { Password is required }
+        </mat-error>
+      </mat-form-field><br>
+      <mat-form-field>
+        <mat-label> Confirm Password</mat-label>
+        <input matInput type="password" placeholder="Enter your password again" formControlName="confirmPassword"
+          (keyup)="passwordCheck()" />
+        <mat-error>
+          @if (signupForm.get('confirmPassword')?.invalid) { Password is required }
+          <!-- @if (signupForm.get('confirmPassword')?.errors?.['passwordsMismatch'] ) {Passwords do not match} -->
+        </mat-error>
+      </mat-form-field><br>
+      <div class="password-error"> @if (checkPasswordValue){Passwords do not match}</div>
 
-    <button mat-raised-button color="primary" type="submit" [disabled]="!signupForm.valid">SignUp</button><br><br>
-    <div> Already have an account? <a routerLink="/login">Login here</a></div>
-</form>
+      <button mat-raised-button color="primary" type="submit" [disabled]="!signupForm.valid">SignUp</button><br><br>
+      <div> Already have an account? <a routerLink="/login">Login here</a></div>
+    </form>
