--- a/src/app/components/cart/cart.component.scss
+++ b/src/app/components/cart/cart.component.scss
@@ -1,72 +1,87 @@
-.remove-button{
-    height:20px;
+.remove-button {
+    height: 20px;
     width: 20px;
-   margin-bottom: 10px;
+    margin-bottom: 10px;
     margin-right: 10px;
     background-color: rgb(218, 217, 213);
-   
+    position: absolute;
+    right: 0;
 }
 
-.custom-card{
-     margin-top:10px ;
+.custom-card {
+    margin-top: 10px;
     margin-bottom: 20px;
     margin-right: 10px;
-    margin-left:20px;
-}
-
-h1,h2{
-     margin-left:20px;
-}
-
-img{
-    float:left;
-    margin-right: 20px;
-    width:200px;
-    height:220px;
-}
-
-
-
-.content{
     margin-left: 20px;
 }
 
-.cost{
+h1,
+h2 {
+    margin-left: 20px;
+}
+
+img {
+    float: left;
+    margin-right: 20px;
+    width: 200px;
+    height: 220px;
+}
+
+
+
+.content {
+    margin-left: 20px;
+}
+
+.cost {
     font-size: x-large;
 }
 
-.total{
-    margin-left:87% ;
+.total {
+    position: absolute;
+    right: 20px;
+
+    font-size: x-large;
+}
+
+.availability {
+    margin-top: 10px;
     margin-right: 20px;
     font-size: x-large;
 }
 
-.availability{
-    margin-top: 10px;
-   margin-right: 20px;
-    font-size:x-large;
-}
-
-.quantity{
+.quantity {
     margin-left: 220px;
 }
 
-.order{
-    margin-left:92%;
+.order {
+    position: absolute;
+    right: 10px;
 }
 
-.emptyCart{
-     text-align: center;
-     font-size:x-large;
+.emptyCart {
+    text-align: center;
+    font-size: x-large;
 }
 
-.shopping-cart{
-    font-size: 48px; 
-      height: 48px;
-      width: 48px;    
+.shopping-cart {
+    font-size: 48px;
+    height: 48px;
+    width: 48px;
 }
 
-.product-left{
-    margin-top:10px;
-    font-size:large
+.product-left {
+    margin-top: 10px;
+    font-size: large
+}
+
+.coupon{
+    height: 60px;
+    width: 150px;
+    margin-top: 20px;
+     margin-left: 20px;
+    margin-right: 10px;
+    left: 0;
+    bottom: 10px;
+    font-size: large;
 }
