--- a/src/app/components/product-dashboard/product-dashboard.component.html
+++ b/src/app/components/product-dashboard/product-dashboard.component.html
@@ -2,6 +2,8 @@
   <button class="add-button" matFab extended color="primary" (click)="openDialog()"><mat-icon>add</mat-icon>New
     Product</button>
 
+  <button class="coupons"  matFab extended color="primary" routerLink="/coupons"><mat-icon>discount</mat-icon>Coupons</button>
+
   <mat-form-field class="search">
     <mat-label><mat-icon>search</mat-icon> Search</mat-label>
     <input matInput (keyup)='search($event)'>
@@ -71,8 +73,6 @@
   <ng-container matColumnDef="action">
     <th mat-header-cell *matHeaderCellDef><b>Action </b> </th>
     <td mat-cell *matCellDef="let product">
-      <!-- <button mat-button color="accent"  (click)="productDetail(product.productId)"><mat-icon>info</mat-icon>View product</button> -->
-      <!-- <button mat-button color="warn"><mat-icon>shopping_cart</mat-icon>Shop now</button> -->
       <button class="menu" mat-icon-button [matMenuTriggerFor]="menu">
         <mat-icon>more_vert</mat-icon>
       </button>
@@ -87,6 +87,6 @@
   <tr mat-row *matRowDef="let row; columns: productDisplayedColumns;"></tr>
 </table>
    @if(this.productDataSource.data.length === 0 ){
-    <div class="emptyCart"><h1><mat-icon>remove_shopping_cart</mat-icon> Product not found</h1> </div>
+    <div class="emptyCart"><h1><mat-icon class="no-product">remove_shopping_cart</mat-icon> Product not found</h1> </div>
    }
 <mat-paginator [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons> </mat-paginator>
