--- a/src/app/components/product-dashboard/product-dashboard.component.scss
+++ b/src/app/components/product-dashboard/product-dashboard.component.scss
@@ -60,8 +60,15 @@ img[mat-card-image] {
      font-size:x-large;
 }
 
-mat-icon{
+.no-product{
     font-size: 48px; 
       height: 48px;
       width: 48px;    
+}
+
+.coupons{
+  margin-top:10px ;
+    margin-bottom: 20px;
+    margin-left: 10px;
+    font-size: larger;
 }
