--- a/src/app/components/coupons/coupons-dialog/coupons-dialog.component.html
+++ b/src/app/components/coupons/coupons-dialog/coupons-dialog.component.html
@@ -12,37 +12,51 @@
             </mat-error>
         </mat-form-field>
 
-                <mat-form-field>
+        <mat-form-field>
             <mat-label>Discount</mat-label>
             <input type=number matInput formControlName="discount" min="0" />
             <mat-error>
                 @if (couponForm.get('discount')?.invalid) {
                 Discount is required
                 }
-                 @if (couponForm.controls['discount'].hasError('pattern') && couponForm.controls['discount'].touched ){Negative number is not allowed }
+                @if (couponForm.controls['discount'].hasError('pattern') && couponForm.controls['discount'].touched
+                ){Negative number is not allowed }
             </mat-error>
         </mat-form-field>
 
-                <mat-form-field>
+        <mat-form-field>
             <mat-label>Max Discounted Amount</mat-label>
-            <input type=number  matInput formControlName="maxAmount" min="0"/>
+            <input type=number matInput formControlName="maxAmount" min="0" />
             <mat-error>
                 @if (couponForm.get('maxAmount')?.invalid) {
                 Amount is required
                 }
-                                 @if (couponForm.controls['discount'].hasError('pattern') && couponForm.controls['discount'].touched ){Negative number is not allowed }
+                @if (couponForm.controls['discount'].hasError('pattern') && couponForm.controls['discount'].touched
+                ){Negative number is not allowed }
             </mat-error>
         </mat-form-field>
 
-                <mat-form-field>
+        <mat-form-field>
             <mat-label>Offer aplicable Above amount </mat-label>
-            <input type=number  matInput formControlName="minQuantityCost" min="0"/>
+            <input type=number matInput formControlName="minQuantityCost" min="0" />
             <mat-error>
                 @if (couponForm.get('minQuantityCost')?.invalid) {
                 Amount is required
                 }
-                                 @if (couponForm.controls['minQuantityCost'].hasError('pattern') && couponForm.controls['minQuantityCost'].touched ){Negative number is not allowed }
+                @if (couponForm.controls['minQuantityCost'].hasError('pattern') &&
+                couponForm.controls['minQuantityCost'].touched ){Negative number is not allowed }
             </mat-error>
+        </mat-form-field>
+
+
+        <mat-form-field>
+            <mat-label>Select Applicable Products</mat-label>
+            <mat-select [formControl]="selectedProduct"  multiple>
+                @for (product of products; track $index) {
+                <mat-option  class="options" [value]="product.productId" >
+                    {{ product.productName }}</mat-option>
+                }
+            </mat-select>
         </mat-form-field>
 
     </form>
