--- a/src/app/components/cart/cart.component.scss
+++ b/src/app/components/cart/cart.component.scss
@@ -39,7 +39,7 @@ img {
 
 .total {
     position: absolute;
-    right: 20px;
+    right: 150px;
 
     font-size: x-large;
 }
@@ -78,10 +78,7 @@ img {
 .coupon{
     height: 60px;
     width: 150px;
-    margin-top: 20px;
-     margin-left: 20px;
-    margin-right: 10px;
-    left: 0;
-    bottom: 10px;
+     margin-left:88%;
+     margin-bottom: 15px;
     font-size: large;
 }
