--- a/src/app/components/coupons/view-coupons/view-coupons.component.html
+++ b/src/app/components/coupons/view-coupons/view-coupons.component.html
@@ -7,7 +7,7 @@
     <button matFab (click)="deleteCoupon(coupon.couponId)"> <mat-icon>delete</mat-icon> </button></div>
       <div class="coupons"><b>Cupon Code : </b>{{coupon.couponCode}}</div>
       <div class="coupons"><b>Discount : </b>{{coupon.discount}}%</div>
-      <div class="coupons"><b>Offer aplicable Above amount  : </b>{{coupon.minQuantityCost | currency:'INR'
+      <div class="coupons"><b>Offer applicable Above amount  : </b>{{coupon.minQuantityCost | currency:'INR'
       :'symbol':'1.0-2'}}</div>
       <div class="coupons"><b>Max Discounted Amount : </b>{{coupon.maxAmount | currency:'INR'
       :'symbol':'1.0-2'}}</div>
