--- a/src/app/components/cart/cart.component.html
+++ b/src/app/components/cart/cart.component.html
@@ -3,7 +3,9 @@
      @if(userCart.length>0){
      <h2 class="header"> <b>Total Cost : {{totalAmount | currency:'INR' :'symbol':'1.0-2'}}</b> </h2>
      }
+     
 </div>
+{{priceAfterDiscount}}
 
 <div class="emptyCart">
      @if(userCart.length===0){
@@ -14,9 +16,10 @@
 @for (cart of userCart; track cart.cartId) {
 <mat-card class="custom-card">
 
-     <mat-card-header class="header" (click)="cardClick(cart.product?.productId!)">
+     <mat-card-header class="header">
 
-          <mat-card-title class="title"><b>{{cart.product?.productName}}</b>     <span class="total"> <b>Total : {{cart.totalCost | currency:'INR' :'symbol':'1.0-2' }} </b> </span></mat-card-title>
+          <mat-card-title class="title" ><b  (click)="cardClick(cart.product?.productId!)">{{cart.product?.productName}}</b>     <span class="total"  (click)="cardClick(cart.product?.productId!)"> <b>Total : {{cart.totalCost | currency:'INR' :'symbol':'1.0-2' }} </b></span>  <button matFab extended class="remove-button"  (click)="removeCart(cart.cartId)">
+               <mat-icon>close</mat-icon></button></mat-card-title>
 
 
      </mat-card-header>
@@ -31,12 +34,15 @@
           <div  class="product-left" [style.color]="cart.product!.quantity < 10 ? 'orange' : 'black'">
                 Product left <b>{{cart.product?.quantity}}</b>  </div> 
           <div class="availability" [style.color]="cart.product!.quantity > 0 ? 'green' : 'red'">
-               {{cart.product!.quantity > 0 ? 'In Stock' : 'Out of Stock' }}</div> <br>
+               {{cart.product!.quantity > 0 ? 'In Stock' : 'Out of Stock' }}  
+
+          </div> <br>
 
 
      </mat-card-content>
-     <div ><button matFab extended class="remove-button"  (click)="removeCart(cart.cartId)">
-               <mat-icon>close</mat-icon></button></div>
-               <button class="coupon" matButton="tonal" ><mat-icon>local_offer</mat-icon>Apply Coupon</button>
+               <span >@if(availableApplybutton(cart.productId)){<button class="coupon"  matButton="tonal" (click)="openApplyCouponDialog(cart)"><mat-icon>local_offer</mat-icon><b>Apply Coupon </b></button>}</span>
+     <div > 
+           </div>
+              
 </mat-card>
 }
