--- a/src/app/components/sign-up/sign-up.component.html
+++ b/src/app/components/sign-up/sign-up.component.html
@@ -33,19 +33,23 @@
       <mat-form-field>
         <mat-label>Password</mat-label>
         <input matInput type="password" placeholder="Enter your password" formControlName="password"
-          (keyup)="passwordCheck()" />
+          />
+          <!--  (keyup)="passwordCheck()" -->
         <mat-error>
-          @if (signupForm.get('password')?.invalid) { Password is required }
+         @if (signupForm.controls['password'].hasError('required') && signupForm.controls['password'].touched) { Password is required }
+         @if (signupForm.controls['password'].hasError('minlength') && signupForm.controls['password'].touched) {  Minimum length is 6 }
         </mat-error>
       </mat-form-field><br>
       <mat-form-field>
         <mat-label> Confirm Password</mat-label>
-        <input matInput type="password" placeholder="Enter your password again" formControlName="confirmPassword"
-          (keyup)="passwordCheck()" />
+        <input matInput type="password" placeholder="Enter your password again" formControlName="confirmPassword"  />
         <mat-error>
-          @if (signupForm.get('confirmPassword')?.invalid) { Password is required }
-          <!-- @if (signupForm.get('confirmPassword')?.errors?.['passwordsMismatch'] ) {Passwords do not match} -->
+          @if (signupForm.controls['confirmPassword'].hasError('required') && signupForm.controls['confirmPassword'].touched) { Password is required }
+           @if (signupForm.errors?.['passwordsMismatch'] && signupForm.controls['confirmPassword'].touched) {
+          passwords do not match here
+          }
         </mat-error>
+       
       </mat-form-field><br>
       <div class="password-error"> @if (checkPasswordValue){Passwords do not match}</div>
 
