--- a/src/app/components/product-details/product-details.component.html
+++ b/src/app/components/product-details/product-details.component.html
@@ -1,44 +1,43 @@
-<div> 
- <div class="title"><b>{{product?.productName}}</b></div>
-<div class="image-container">
-  @for (image of product?.img; track $index) {
+<div>
+  <div class="title"><b>{{product?.productName}}</b></div>
+  <div class="image-container">
+    @for (image of product?.img; track $index) {
     <img [src]="image" alt="Product Image">
-  }
-</div>  
-    <div class="description">{{product?.description}}</div>
-    <div class="cost"><b>{{product?.cost | currency:'INR':'symbol':'1.0-2'}} </b></div>  
-    <div class="availability" [style.color]="product!.quantity > 0 ? 'green' : 'red'"> {{product!.quantity > 0 ? 'In Stock' : 'Out of Stock' }}</div> 
-   @if(product!.quantity < 11) { <div class="quantity">Only <b> {{product?.quantity}}</b> left</div> }
-      
+    }
+  </div>
+  <div class="description">{{product?.description}}</div>
+  <div class="cost"><b>{{product?.cost | currency:'INR':'symbol':'1.0-2'}} </b></div>
+  <div class="availability" [style.color]="product!.quantity > 0 ? 'green' : 'red'"> {{product!.quantity > 0 ? 'In
+    Stock' : 'Out of Stock' }}</div>
+  @if(product!.quantity < 11) { <div class="quantity">Only <b> {{product?.quantity}}</b> left
+</div> }
+
 </div>
 
-
-      
-<div class="action-button"> 
-  <input class="increment" matInput [formControl]="quantityValue" type="number" min="0" max={{product?.quantity}} value="0">
- <button class="addtoCart" mat-button color="accent" (click)="addToCart(product!)"> <mat-icon>add_shopping_cart</mat-icon><b>Add to Cart </b> </button>
-<!-- <button mat-button color="warn" (click)="placeOrder()"><mat-icon>shopping_cart</mat-icon>Shop now</button> -->
+<div class="action-button">
+  <input class="increment" matInput [formControl]="quantityValue" type="number" min="0" max={{product?.quantity}}
+    value="0">
+  <button class="addtoCart" mat-button color="accent" (click)="addToCart(product!)">
+    <mat-icon>add_shopping_cart</mat-icon><b>Add to Cart </b> </button>
 </div>
 
 <button mat-raised-button (click)="showReviewStatus()" class="review-button">
- <b>View Reviews</b> </button>
+  <b>View Reviews</b> </button>
 @if(showReview){
-<div class="review"  ><app-review [id]="product!.productId"></app-review> </div>
+<div class="review"><app-review [id]="product!.productId"></app-review> </div>
 }
 
 <h1>Related products with free delivery on eligible orders</h1>
-  <div class="image-container" >
+<div class="product-container">
   @for(item of categoryProducts; track $index){
-<mat-card  (click)="cardClick(item!.productId)"> 
-  <div class="content"   (click)="cardClick(item!.productId)"><b>  {{item?.productName}}</b></div>
-<div   (click)="cardClick(item!.productId)">    <img [src]=item.img alt="Product Image"></div>
-  <div class="cost"><b>{{item?.cost | currency:'INR':'symbol':'1.0-2'}}</b>  </div> 
-      <div class="availability" [style.color]="item!.quantity > 0 ? 'green' : 'red'"> {{item!.quantity > 0 ? 'In Stock' : 'Out of Stock' }}</div>  
-    <div>    @if(item!.quantity < 11) { <div class="quantity">Only <b> {{item?.quantity}}</b> left</div> }</div>
+  <mat-card (click)="cardClick(item!.productId)">
+    <div class="content" (click)="cardClick(item!.productId)"><b> {{item?.productName}}</b></div>
+    <div (click)="cardClick(item!.productId)"> <img [src]=item.img alt="Product Image"></div>
+    <div class="cost"><b>{{item?.cost | currency:'INR':'symbol':'1.0-2'}}</b> </div>
+    <div class="availability" [style.color]="item!.quantity > 0 ? 'green' : 'red'"> {{item!.quantity > 0 ? 'In Stock' :
+      'Out of Stock' }}</div>
+    <div> @if(item!.quantity < 11) { <div class="quantity">Only <b> {{item?.quantity}}</b> left</div> }
+</div>
 </mat-card>
 }
-   
-
 </div>
-
-      
